Fri Jun 14 13:20:58 GMT 2013  Olly Betts <olly@survex.com>

	* common/fd.h: Add missing header include guards.

Fri Jun 14 13:19:44 GMT 2013  Olly Betts <olly@survex.com>

	* common/append_filename_arg.h,geospatial/geoencode.h: Fix header
	  include guard names which don't match our naming conventions.

Fri Jun 14 13:18:40 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_dbcheck.h,backends/chert/chert_dbcheck.h,
	  backends/multi/multi_alltermslist.h: Fix header include guard macro
	  names which don't match the source file names.

Fri Jun 14 12:48:14 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.h: Whitespace tweak.

Thu Jun 13 13:58:14 GMT 2013  Olly Betts <olly@survex.com>

	* backends/chert/chert_positionlist.cc: Remove 'Assert(rd);' since rd
	  is no longer a pointer.

Thu Jun 13 13:28:43 GMT 2013  Olly Betts <olly@survex.com>

	* tests/harness/utestsuite.cc: Add missing GPL boilerplate and
	  copyright statements.

Thu Jun 13 13:26:07 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.cc,common/compression_stream.h: Add
	  missing GPL boilerplate and copyright statements.

Thu Jun 13 13:24:34 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.cc,common/compression_stream.h: Remove
	  unused header includes; don't use "using namespace std;" in a
	  header.

Thu Jun 13 08:30:26 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_positionlist.cc: Remove 'Assert(rd);' since rd
	  is no longer a pointer.

Thu Jun 13 05:07:27 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.h: Update include guard to match source
	  file name.

Thu Jun 13 02:38:20 GMT 2013  Olly Betts <olly@survex.com>

	* common/,net/length.h,net/serialise.h: Fix @file markup which wasn't
	  actually in a doxygen comment.

Thu Jun 13 02:14:22 GMT 2013  Olly Betts <olly@survex.com>

	* preautoreconf: Remove needless use of perl prototype.
